migrating package json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "replaced-by-user-input",
-    "description": "replaced-by-user-input",
+    "name": "John Wright's personal website",
+    "description": "A personal landing page and blog for John Wright Stanly",
     "version": "0.0.1",
     "private": true,
     "dependencies": {},
