--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,16 @@
 
 # misc
 .DS_Store
+.env
 .env.local
+.env.development
 .env.development.local
-.env.test.local
+.env.staging
+.env.production
 .env.production.local
+.env.test.local
+.env-cmdrc
+.env-cmdrc.js
 
 npm-debug.log*
 yarn-debug.log*
