update deps and yarn install

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "John Wright's personal website",
+    "name": "john-wrights-personal-website",
     "description": "A personal landing page and blog for John Wright Stanly",
     "version": "0.0.1",
     "private": true,
