--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.53",
         "@types/react-dom": "^16.9.8",
+        "aws-sdk": "^2.437.0",
         "env-cmd": "10.0.1",
         "react": "^17.0.1",
         "react-bootstrap": "^1.4.0",
@@ -22,9 +23,7 @@
         "web-vitals": "^0.2.4"
     },
     "devDependencies": {
-        "jest": "^26.6.3",
-        "eslint": "6.6.0",
-        "eslint-plugin-react": "7.16.0"
+        "jest": "^26.6.3"
     },
     "scripts": {
         "start": "react-scripts start",
