--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "web-vitals": "^0.2.4"
     },
     "devDependencies": {
-        "jest": "^26.6.3"
+        "jest": "26.6.0"
     },
     "scripts": {
         "start": "react-scripts start",
