--- a/template.yml
+++ b/template.yml
@@ -46,10 +46,24 @@ Resources:
         CertificateArn: !Ref AcmCertificateArn
         EndpointConfiguration: EDGE
 
+  LambdaLibs:
+    Type: AWS::Serverless::LayerVersion
+    Properties:
+      LayerName: lambda-layer-lib
+      Description: Dependencies for the lambda functions, seperate from the react frontend
+      ContentUri: lambda-lib/.
+      CompatibleRuntimes:
+        - nodejs14.x
+    Metadata:
+      BuildMethod: makefile
+
   helloFromLambdaFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: sam/handlers/hello-from-lambda.helloFromLambdaHandler
+      Layers:
+        - !Ref LambdaLibs
+      CodeUri: sam/handlers
+      Handler: hello-from-lambda.helloFromLambdaHandler
       Runtime: nodejs14.x
       MemorySize: 128
       Timeout: 100
@@ -63,20 +77,7 @@ Resources:
           Properties:
             RestApiId: !Ref MyApi
             Path: /helloWorld
-            Method: GET
-      Layers:
-        - !Ref LambdaLibs
-
-  LambdaLibs:
-    Type: AWS::Serverless::LayerVersion
-    Properties:
-      LayerName: lambda-layer-lib
-      Description: Dependencies for the lambda functions, seperate from the react frontend
-      ContentUri: lambda-lib/.
-      CompatibleRuntimes:
-        - nodejs14.x
-      Metadata:
-        BuildMethod: makefile
+            Method: GET 
 
   Bucket:
     Type: AWS::S3::Bucket
