--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,17 @@
 # testing
 /coverage
 
+# next.js
+/.next/
+/out/
+
 # production
 /build
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # misc
 .DS_Store
