--- a/package.json
+++ b/package.json
@@ -4,40 +4,31 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "@testing-library/jest-dom": "^5.11.4",
-        "@testing-library/react": "^11.1.0",
-        "@testing-library/user-event": "^12.1.10",
-        "@types/jest": "^26.0.15",
+        "aws-amplify": "^3.3.20",
+        "next": "10.0.7",
+        "react": "^17.0.1",
+        "react-bootstrap": "^1.4.0",
+        "react-dom": "^17.0.1"
+    },
+    "devDependencies": {
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.53",
         "@types/react-dom": "^16.9.8",
-        "aws-sdk": "^2.437.0",
         "env-cmd": "10.0.1",
-        "react": "^17.0.1",
-        "react-bootstrap": "^1.4.0",
-        "react-dom": "^17.0.1",
-        "react-router-dom": "^5.2.0",
-        "react-scripts": "4.0.1",
         "shelljs": "^0.8.3",
-        "typescript": "^4.0.3",
-        "web-vitals": "^0.2.4"
-    },
-    "devDependencies": {
-        "jest": "26.6.0"
+        "typescript": "^4.2.2"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-
+        "dev": "NODE_OPTIONS='--inspect' next dev",
+        "build": "next build",
+        "start": "next start",
+        "export": "next export",
         "sam-build": "env-cmd -e production node ./scripts/sam_build",
         "sam-package": "env-cmd -e production node ./scripts/sam_package",
         "sam-deploy": "env-cmd -e production node ./scripts/sam_deploy",
-        
         "provision": "yarn run sam-build && yarn run sam-deploy",
         "upload": "env-cmd -e production node ./scripts/upload_bucket",
-        "deploy": "yarn run build && yarn run upload"
+        "deploy": "yarn run build && yarn run export && yarn run upload"
     },
     "eslintConfig": {
         "extends": [
