--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "private": true,
     "dependencies": {
         "aws-amplify": "^3.3.20",
+        "bootstrap": "^4.6.0",
         "next": "10.0.7",
         "react": "^17.0.1",
         "react-bootstrap": "^1.4.0",
