--- a/sam/package.json
+++ b/sam/package.json
@@ -5,8 +5,13 @@
   "dependencies": {
     "aws-sdk": "^2.437.0"
   },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.51",
+    "@types/node": "^13.13.5",
+    "typescript": "^3.8.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "tsc"
   },
   "keywords": [],
   "author": "",
