--- a/sam/package.json
+++ b/sam/package.json
@@ -11,7 +11,7 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "compile": "tsc"
+    "compile": "tsc -p tsconfig.sam.json"
   },
   "keywords": [],
   "author": "",
