--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "build": "next build",
         "start": "next start",
         "export": "next export",
+        "compile-lambdas": "node ./scripts/compile_lambdas",
         "sam-build": "env-cmd -e production node ./scripts/sam_build",
         "sam-package": "env-cmd -e production node ./scripts/sam_package",
         "sam-deploy": "env-cmd -e production node ./scripts/sam_deploy",
