lambdas can be compiled without commonjs script

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "sam-build": "env-cmd -e production node ./scripts/sam_build",
         "sam-package": "env-cmd -e production node ./scripts/sam_package",
         "sam-deploy": "env-cmd -e production node ./scripts/sam_deploy",
-        "provision": "yarn run sam-build && yarn run sam-deploy",
+        "provision": "yarn run compile-lambdas && yarn run sam-build && yarn run sam-deploy",
         "upload": "env-cmd -e production node ./scripts/upload_bucket",
         "deploy": "yarn run build && yarn run export && yarn run upload"
     },
