rough draft for deleteCommentReply

--- a/template.yml
+++ b/template.yml
@@ -244,6 +244,27 @@ Resources:
             Auth:
               ApiKeyRequired: true
 
+  DeleteCommentLambdaFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      # Layers:
+      #   - !Ref LambdaLibs
+      Handler: handlers/commentLambdas.deleteCommentReply
+      Description: Delete a comment in a blog article
+      Policies:
+        - AWSLambdaBasicExecutionRole
+        - DynamoDBCrudPolicy:
+            TableName: !Ref PersonalWebsiteTable
+      Events:
+        Api:
+          Type: Api
+          Properties:
+            RestApiId: !Ref PersonalWebsiteApi
+            Path: /blog/comment/reply
+            Method: DELETE
+            Auth:
+              ApiKeyRequired: true
+
   Bucket:
     Type: AWS::S3::Bucket
     Properties:
