--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "next": "10.0.7",
         "react": "^17.0.1",
         "react-bootstrap": "^1.4.0",
-        "react-dom": "^17.0.1"
+        "react-dom": "^17.0.1",
+        "react-markdown": "^5.0.3"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
@@ -25,11 +26,9 @@
         "build": "next build",
         "start": "next start",
         "export": "next export",
-
         "index-html": "node ./scripts/index_html",
         "sync-s3": "env-cmd -e production node ./scripts/upload_bucket",
         "deploy": "yarn run build && yarn run export && yarn run index-html && yarn run sync-s3",
-
         "compile-lambdas": "tsc -p sam/tsconfig.sam.json",
         "sam-build": "env-cmd -e production node ./scripts/sam_build",
         "sam-package": "env-cmd -e production node ./scripts/sam_package",
